# library-with-cmake

./: README.md
src/: CMakeLists.txt  hello.c  hello.h  main  main.c
